--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc -w && nodemon dist/app"
+    "dev": "tsc && nodemon dist/app"
   },
   "keywords": [],
   "author": "",
